--- a/sakai-evaluation-tool/src/webapp/component-templates/render_text_item.html
+++ b/sakai-evaluation-tool/src/webapp/component-templates/render_text_item.html
@@ -25,6 +25,7 @@
 		
 		<!-- html template for the text item renderer -AZ -->
 		<div rsf:id="render-text-item:" class="item text">
+                    <div rsf:id="textDisplay:">
 			<h5 class="title">
 				<span rsf:id="itemNum" class="number">0</span>
 				<span class="delineator">
@@ -34,10 +35,6 @@
 				<span class="required">*</span>
 				<span rsf:id="itemText" class="label">Item text label.</span>
 
-				<!-- Previous
-				<span rsf:id="itemNum">0</span>.&nbsp;
-				<div rsf:id="itemText" style="display:inline"></div>
-				-->
 			</h5>
 			<div class="content">
 				<textarea rsf:id="essayBox"></textarea>
@@ -46,6 +43,7 @@
 					<label rsf:id="descNA" for="itemNA">N/A</label>
 				</span>
 			</div> <!-- end content -->
+                    </div> <!-- end display div -->
 		</div> <!-- end item -->
 	
 	</body>
